--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,8 @@
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -17,13 +14,37 @@ body {
 	margin: 0;
 	display: flex;
 	place-items: center;
-	min-width: 320px;
-	min-height: 100vh;
 }
 
-#app {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
-	text-align: center;
+.action-button-area {
+	position: absolute;
+	right: calc(0.5 * var(--button-width));
+	top: 50%;
+	transform: translateY(-50%);
+	display: flex;
+	flex-direction: column;
+	gap: calc(0.2 * var(--button-width));
 }
+
+.action-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: var(--button-width);
+	height: var(--button-width);
+	background-color: var(--button-background-color);
+	border-radius: 10%;
+	color: var(--button-text-color);
+	transition: 0.3s;
+}
+
+.action-button:hover {
+	cursor: pointer;
+	background-color: var(--button-hover-color);
+}
+
+.selected-action-button {
+	border: 2px solid var(--button-accent-color);
+	box-sizing: border-box;
+}
+
