--- a/src/style.css
+++ b/src/style.css
@@ -48,3 +48,53 @@ body {
 	box-sizing: border-box;
 }
 
+.shortcut-info-area {
+	position: absolute;
+	right: calc(1.7 * var(--button-width));
+	top: 50%;
+	transform: translateY(-50%);
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	gap: calc(0.2 * var(--button-width));
+}
+
+.shortcut-info {
+	padding-right: 0.8rem;
+	padding-left: 0.8rem;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	height: var(--button-width);
+	background-color: var(--button-background-color);
+	border-radius: calc(0.1 * var(--button-width));
+	color: var(--button-text-color);
+	transition: 0.3s;
+}
+
+.info-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: var(--button-width);
+	height: var(--button-width);
+	background-color: var(--button-background-color);
+	border-radius: 10%;
+	color: var(--button-text-color);
+	transition: 0.3s;
+	position: absolute;
+	right: calc(0.5 * var(--button-width));
+	top: calc(0.5 * var(--button-width));
+}
+
+.info-button:hover {
+	cursor: pointer;
+	background-color: var(--button-hover-color);
+}
+
+.info-button-active {
+	border: 2px solid var(--button-accent-color);
+	box-sizing: border-box;
+}
+
