--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,8 @@ body {
 	border-radius: 10%;
 	color: var(--button-text-color);
 	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
 }
 
 .action-button:hover {
@@ -71,6 +73,8 @@ body {
 	border-radius: calc(0.1 * var(--button-width));
 	color: var(--button-text-color);
 	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
 }
 
 .info-button {
@@ -83,6 +87,8 @@ body {
 	border-radius: 10%;
 	color: var(--button-text-color);
 	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
 	position: absolute;
 	right: calc(0.5 * var(--button-width));
 	top: calc(0.5 * var(--button-width));
@@ -110,7 +116,18 @@ body {
 	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 	backdrop-filter: blur(15px);
 	z-index: 999;
-	transition: 0.3s; /* Slide out and in for transitions */
+}
+
+.fadeable {
+	opacity: 1;
+	transition: visibility 0.3s, opacity 0.3s;
+	-webkit-transition: visibility 0.3s, opacity 0.3s;
+	-moz-transition: visibility 0.3s, opacity 0.3s;
+}
+
+.fade {
+	opacity: 0;
+	visibility: hidden;
 }
 
 .close-panel-button {
@@ -123,7 +140,6 @@ body {
 	width: var(--button-width);
 	height: var(--button-width);
 	color: var(--button-text-color);
-	transition: 0.3s;
 }
 
 .close-panel-button:hover {
@@ -141,6 +157,8 @@ body {
 	height: var(--button-width);
 	color: var(--button-text-color);
 	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
 }
 
 .show-panel-button:hover {
