--- a/src/style.css
+++ b/src/style.css
@@ -26,15 +26,18 @@ body {
 	gap: calc(0.2 * var(--button-width));
 }
 
-.action-button {
+.base-button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: var(--button-width);
 	height: var(--button-width);
 	background-color: var(--button-background-color);
-	border-radius: 10%;
+	border-radius: calc(0.1 * var(--button-width));
 	color: var(--button-text-color);
+}
+
+.action-button {
 	transition: 0.3s;
 	-webkit-transition: 0.3s;
 	-moz-transition: 0.3s;
@@ -65,7 +68,6 @@ body {
 	padding-right: 0.8rem;
 	padding-left: 0.8rem;
 	display: flex;
-	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	height: var(--button-width);
@@ -78,14 +80,6 @@ body {
 }
 
 .info-button {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: var(--button-width);
-	height: var(--button-width);
-	background-color: var(--button-background-color);
-	border-radius: 10%;
-	color: var(--button-text-color);
 	transition: 0.3s;
 	-webkit-transition: 0.3s;
 	-moz-transition: 0.3s;
